# amr-sets-calc-cli

./: .gitignore  CMakeLists.txt  README.md
inc/: CMakeLists.txt  calculator.hpp  cli_parser.hpp  constants.hpp  csv_processor.hpp
src/: CMakeLists.txt  calculator.cpp  cli_parser.cpp  csv_processor.cpp  main.cpp
